fix few errors on id naming

--- a/src/pages/login-signup.html
+++ b/src/pages/login-signup.html
@@ -58,7 +58,7 @@
             <h2 class="title">Sign up</h2>
             <div class="input-field ">
               <i class="fas fa-store label-icon"></i>
-              <input type="text" placeholder="Storename" id="storeName">
+              <input type="text" placeholder="Storename" id="storeNameInput">
               <i class="fas fa-check-circle validation-icon"></i>
               <i class="fas fa-exclamation-circle validation-icon"></i>
               <small>Error message</small>
