--- a/src/pages/top-products.html
+++ b/src/pages/top-products.html
@@ -64,7 +64,7 @@
 
 	<script src="https://kit.fontawesome.com/562501533e.js" crossorigin="anonymous"></script>
 
-	<title>DASHBOARD</title>
+	<title>TOP PRODUCTS</title>
 	
 </head>
 <body class="dashboard">
@@ -194,7 +194,7 @@
 			</div>
 		  </nav>
   
-		  <h2>DASHBOARD HERE</h2>
+		  <h2>TOP PRODUCTS HERE</h2>
 	</div>
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
