--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="landing-page">
 
 	
-	
-	<script src="./src/js/index.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/2.0.0-alpha0/date_fns.js"></script>
+	<script type="module" src="./src/js/index.js"></script>
 </body>
 </html>
