--- a/src/pages/item-management.html
+++ b/src/pages/item-management.html
@@ -249,12 +249,12 @@
 							<thead class="bg-primary text-white">
 								<tr>
 									<th scope="col" class="text-center">Image</th>
-									<th scope="col">Product</th>
-									<th scope="col">Category</th>
-									<th scope="col">Price</th>
-									<th scope="col">Quantity</th>
-									<th scope="col">Total Price</th>
-									<th scope="col">Expiration</th>
+									<th scope="col" class="text-center">Product</th>
+									<th scope="col" class="text-center">Category</th>
+									<th scope="col" class="text-center">Price</th>
+									<th scope="col" class="text-center">Quantity</th>
+									<th scope="col" class="text-center">Total Price</th>
+									<th scope="col" class="text-center">Expiration</th>
 									<th scope="col" class="text-center">Actions</th>
 								</tr>
 								
