Fix the Sweetalert outside click and revise landing page about paragraph

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="col-md-6 pt-5 pb-2"><img class="img-fluid" src="./src/images/saritory dashboard 1.png" /></div>
 				<div class="col-md-6 pt-5 mt-5 pb-5">
 					<p>
-						Saritoy's Inventory Management System is the best system in the Philippines as it is designed to catch an array of details of your inventory, sales, item expiration and most sellable item so that you can make the right
+						Saritoy's Inventory Management System is one of the best inventory system in the Philippines as it is designed to catch an array of details of your inventory, sales, item expiration and most sellable item so that you can make the right
 						inventory replenishment decisions quickly. While the system provides an inventory alert, you can prevent any sort of inventory inefficiencies in the shortest possible time.
 					</p>
 				</div>
